--- a/kenken/manifest.json
+++ b/kenken/manifest.json
@@ -1,15 +1,15 @@
 {
-    "name": "लीपि ट्विस्ट",
-    "short_name": "लीपि ट्विस्ट",
+    "name": "केन्-केन्",
+    "short_name": "केन्-केन्",
     "theme_color": "#131313",
-    "background_color": "white",
+    "background_color": "#3F51B5",
     "display": "standalone",
     "orientation": "portrait",
     "scope": "/",
     "start_url": "index.html",
       "icons": [
       {
-        "src": "assets/srivatsa.png",
+        "src": "assets/icon.png",
         "type": "image/png",
         "sizes": "192x192"
       }
